--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set -g prefix C-f
 bind C-f send-prefix
 
+# Set default terminal
+set -g default-terminal "screen-256color"
+
 # UNBINDS
 unbind C-b
 unbind o
@@ -9,6 +12,9 @@ unbind o
 # Set UTF8
 set -g utf8
 set-window-option -g utf8 on
+# Allows to use some native key bindings to the terminal
+# i.e. CTRL+Arrow Keys to move position by words
+set-window-option -g xterm-keys on
 
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
