--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
 
 # resize panes using PREFIX H, J, K, L
 bind H resize-pane -L 5
