--- a/.tmux.conf
+++ b/.tmux.conf
@@ -107,4 +107,4 @@ set -g status-right-length 60
 set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 
 # Copy contents to clipboard using "y"
-bind-key -t vi-copy y copy-pipe 'xsel --clipboard --input >/dev/null'
+bind y run "tmux show-buffer | xclip -selection clipboard"
