changed ansible cow to tux and added buffer clear in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,6 +56,9 @@ set -g display-panes-time 4000
 # Only works on tmux 1.9 or later
 bind c new-window -c "#{pane_current_path}"
 
+# Clear history with CTRL+k
+bind -n C-k clear-history
+
 # ----------------------
 # set some pretty colors
 # ----------------------
