added Q binding to kill session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,9 @@ bind-key -n M-p previous-window
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 
+# Kill all windows
+bind Q kill-session
+
 # map Vi movement keys as pane movement keys
 bind h select-pane -L
 bind j select-pane -D
