added mac osx tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,3 +114,6 @@ set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l
 
 # Copy contents to clipboard using "y"
 bind y run "tmux show-buffer | xclip -selection clipboard"
+
+# MAC OSX Settings
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
