--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,7 @@ set-option -g message-fg brightred #orange
 set-option -g status on                # turn the status bar on
 set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
+set -g status-justify left           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
 
 # visual notification of activity in other windows
@@ -114,6 +114,7 @@ set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l
 
 # Copy contents to clipboard using "y"
 bind y run "tmux show-buffer | xclip -selection clipboard"
+bind -t vi-copy Enter copy-pipe "xclip -i -selection clipboard"
 
 # MAC OSX Settings
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
