updated for mint19

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ unbind C-b
 unbind o
 
 # Set UTF8
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 # Allows to use some native key bindings to the terminal
 # i.e. CTRL+Arrow Keys to move position by words
 set-window-option -g xterm-keys on
@@ -114,7 +114,7 @@ bind -n C-k clear-history
 
 # Copy contents to clipboard using "y"
 bind y run "tmux show-buffer | xclip -selection clipboard"
-bind -t vi-copy Enter copy-pipe "xclip -i -selection clipboard"
+# bind -t vi-copy Enter copy-pipe "xclip -i -selection clipboard"
 
 # MAC OSX Settings
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
