--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,7 @@ bind c new-window -c "#{pane_current_path}"
 # Clear history with CTRL+k
 bind -n C-k clear-history
 
+
 # # ----------------------
 # # set some pretty colors
 # # ----------------------
@@ -120,3 +121,14 @@ bind y run "tmux show-buffer | xclip -selection clipboard"
 
 # MAC OSX Settings
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+
+set -g @plugin 'tmux-plugins/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'alexanderjeurissen/tmux-world-clock'
+set -g @plugin 'pwittchen/tmux-plugin-battery'
+
+set -g @world_clock_tz 'Europe/Amsterdam'
+set -g @world_clock_tz 'US/Pacific'
+set -g @world_clock_tz 'Asia/Kolkata'
+
+run '~/.tmux/plugins/tpm/tpm'
