refactored and added ansible for system setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-# ignore everything
-*
-
-# but not theses
-!img/bash_git.png
-!.bashrc
-!.gitignore
-!.vimrc
-!README.md
-!.ctags
-!.tmux.conf
-!.tmux.conf.local
-!.alacritty.yml
-!.zshrc
+venv/
