--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -255,6 +255,9 @@ mouse_bindings:
 mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
+  url:
+    launcher: xdg-open
+    modifiers: Shift
   hide_when_typing: false
 
 selection:
