--- a/roles/configure_mint/vars/main.yml
+++ b/roles/configure_mint/vars/main.yml
@@ -14,6 +14,9 @@ APT_PROGRAMS:
   - jid
   - jq
   - libbz2-dev
+  - libfreetype6-dev
+  - libfontconfig1-dev
+  - libxcb-xfixes0-dev
   - libncurses5
   - libncurses5-dev
   - neovim
