--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -1,6 +1,9 @@
-font_family      Meslo LG M Regular
+font_family 	 Hack
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
+
+# fixes underscores
+adjust_line_height 1
 
 include ./theme.conf
