--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -80,7 +80,6 @@ bind c new-window -c "#{pane_current_path}"
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 1               # set update frequencey (default 15 seconds)
 set -g status-justify left             # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
@@ -90,8 +89,8 @@ setw -g monitor-activity off
 set -g visual-activity off
 
 # set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
+set-option -g status-bg colour235
+set-option -g status-fg colour031
 
 # set window list colors - red for active and cyan for inactive
 set -g window-status-style fg=colour039
@@ -107,7 +106,7 @@ set -g status-left "#[fg=white] #h#[fg=red]#{vpn_status}#[fg=green] "
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 100
-set -g status-right "#(gitstatus -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=white]#S #I:#P #[fg=colour006]: %b %d %Y #[fg=colour063]: %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $4}')"
+set -g status-right "#(gitstatus -cfg $HOME/gitstatus.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=white]#S #I:#P #[fg=colour006]: %b %d %Y #[fg=colour063]: %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $4}')"
 
 # Copy contents to clipboard using "y"
 bind y run "tmux show-buffer | xclip -selection clipboard"
