--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -106,7 +106,7 @@ set -g status-left "#[fg=white] #h#[fg=red]#{vpn_status}#[fg=green] "
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 100
-set -g status-right "#(gitstatus -cfg $HOME/gitstatus.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=white]#S #I:#P #[fg=colour006]: %b %d %Y #[fg=colour063]: %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $4}')"
+set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=white]#S #I:#P #[fg=colour006]: %b %d %Y #[fg=colour063]: %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $4}')"
 
 # Copy contents to clipboard using "y"
 bind y run "tmux show-buffer | xclip -selection clipboard"
