--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -2,5 +2,5 @@
   name = Byron Kim
   email = nocode99@gmail.com
 [core]
-  pager = cat
+	pager = diff-so-fancy | less --tabs=4 -RFX
   mergeoptions = --no-edit
