--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -39,7 +39,7 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
 
 # Copy with right click
 unbind -n -T copy-mode-vi MouseDown3Pane
-bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | pbcopy > /dev/null"
 # }}}
 
 # Moving windows
