reverted to xsel

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,6 +4,7 @@ bind C-f send-prefix
 
 # Set default terminal
 set -g default-terminal "screen-256color"
+set-option -g default-shell /bin/zsh
 
 # UNBINDS
 unbind C-b
@@ -39,7 +40,7 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
 
 # Copy with right click
 unbind -n -T copy-mode-vi MouseDown3Pane
-bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | pbcopy > /dev/null"
+bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xsel -i --clipboard > /dev/null"
 # }}}
 
 # Moving windows
