moved to coc-pairs

--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -8,5 +8,6 @@
   },
   "suggest.autoTrigger": "always",
   "suggest.noselect": true,
-  "pairs.enableCharacters": ["(", "[", "{", "<"]
+  "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'", "`"]
 }
+
