--- a/.github/workflows/github_comment.yml
+++ b/.github/workflows/github_comment.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: khan/pull-request-comment-trigger@master
         env:
           GITHUB_TOKEN: '${{ secrets.GTHUB_TOKEN }}'
-      - run: 'echo ${{ GITHUB_ACTOR }}'
+      - run: 'echo $GITHUB_ACTOR'
