--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -7,6 +7,7 @@
     }
   },
   "suggest.autoTrigger": "always",
+  "diagnostic.enable": false,
   "suggest.noselect": true,
   "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'", "`"]
 }
