cleaned up unused and status bar

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -12,9 +12,6 @@ set -gu prefix2
 unbind C-a
 unbind o
 
-# Set UTF8
-# set -g utf8
-# set-window-option -g utf8 on
 # Allows to use some native key bindings to the terminal
 # i.e. CTRL+Arrow Keys to move position by words
 set-window-option -g xterm-keys on
@@ -28,7 +25,7 @@ set-option -g allow-rename off
 # shorten command delay
 set -sg escape-time 1
 
-# Mouse options {{{
+# Mouse options ------------------{{{
 set -g mouse on
 
 # Pane doesn't end when you drag with main clicker
@@ -41,7 +38,7 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
 # Copy with right click
 unbind -n -T copy-mode-vi MouseDown3Pane
 bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xsel -i --clipboard > /dev/null"
-# }}}
+# ---------------------------------}}}
 
 # Moving windows
 bind-key -n M-n next-window
@@ -77,10 +74,14 @@ set -g display-panes-time 4000
 # Only works on tmux 1.9 or later
 bind c new-window -c "#{pane_current_path}"
 
-# ----------------------
-# Status Bar
-# -----------------------
+# Copy contents to clipboard using "y"
+bind y run "tmux show-buffer | xclip -selection clipboard"
+# bind -t vi-copy Enter copy-pipe "xclip -i -selection clipboard"
+
+# Status Bar -------------------------------------------------{{{
+
 set-option -g status on                # turn the status bar on
+
 set -g status-interval 1               # set update frequencey (default 15 seconds)
 set -g status-justify left             # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
@@ -100,33 +101,23 @@ set -g window-status-current-style fg=black,bg=colour014
 # Window option navigation using VI (for viewing history)
 set-window-option -g mode-keys vi
 
-# show host name and IP address on left side of status bar
+# Show if connected to VPN
 set -g status-left-length 70
-set -g status-left "#[fg=white] #h#[fg=red]#{vpn_status}#[fg=green] "
+set -g status-left "#{vpn_status}"
 
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 100
-set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=white]#S #I:#P #[fg=colour006]: %b %d %Y #[fg=colour063]: %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $4}')"
-
-# Copy contents to clipboard using "y"
-bind y run "tmux show-buffer | xclip -selection clipboard"
-# bind -t vi-copy Enter copy-pipe "xclip -i -selection clipboard"
+set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=colour063]: %b %d %Y %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $5}')"
 
 # Set window numbering to start at 1
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -g renumber-windows on
 
-# Options for: nhdaly/tmux-better-mouse-mode
-set -g @scroll-down-exit-copy-mode "on"
-set -g @scroll-without-changing-pane "on"
-set -g @scroll-in-moused-over-pane "on"
-set -g @scroll-speed-num-lines-per-scroll "3"
-set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+# --------------------------------------------------------------}}}
 
-# MAC OSX Settings
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
-
+# TPM ----------------------------------------------------------{{{
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -134,8 +125,6 @@ set -g @plugin 'nocode99/tmux-vpn-status'
 set -g @plugin 'alexanderjeurissen/tmux-world-clock'
 set -g @plugin 'pwittchen/tmux-plugin-battery'
 
-set -g @world_clock_tz 'Europe/Amsterdam'
-set -g @world_clock_tz 'US/Pacific'
-set -g @world_clock_tz 'Asia/Kolkata'
-
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# --------------------------------------------------------------}}}
