fixed UTC in 24h format

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -108,7 +108,7 @@ set -g status-left "#{vpn_status}"
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 100
-set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=colour063]: %b %d %Y %l:%M %p : #[fg=colour067]UTC #(date -u | awk '{print $5}')"
+set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=colour063]: %b %d %Y %l:%M %p : #[fg=colour067]UTC #(date -u +%%H:%%M:%%S)"
 
 # Set window numbering to start at 1
 set -g base-index 1
