--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -37,7 +37,11 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
 
 # Copy with right click
 unbind -n -T copy-mode-vi MouseDown3Pane
-bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xsel -i --clipboard > /dev/null"
+if-shell '[[ $(uname -s) = Darwin ]]' {
+  bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | pbcopy > /dev/null"
+} {
+  bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xsel -i --clipboard > /dev/null"
+}
 # ---------------------------------}}}
 
 # Moving windows
