--- a/dotfiles/OSX.conf
+++ b/dotfiles/OSX.conf
@@ -6,3 +6,6 @@ macos_option_as_alt yes
 # Override font
 font_size 	 14
 
+# map option-arrows to jump words
+#map alt+left send_text all \x1b\x62
+#map alt+right send_text all \x1b\x66
