--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -11,5 +11,5 @@ adjust_line_height 1
 include ./theme.conf
 
 # macos settings
-# launchctl setenv MYOS OSX
+# setenv MYOS OSX > /etc/launchd.conf
 include ${MYOS}.conf
