--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,3 +1,4 @@
+# Changing default binding options ------------------{{{
 # Set CTRL+F as prefix
 set -g prefix C-f
 bind C-f send-prefix
@@ -12,18 +13,12 @@ set -gu prefix2
 unbind C-a
 unbind o
 
-# Allows to use some native key bindings to the terminal
-# i.e. CTRL+Arrow Keys to move position by words
-set-window-option -g xterm-keys on
-
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# don't rename windows automatically
-set-option -g allow-rename off
-
 # shorten command delay
 set -sg escape-time 1
+# --------------------------------------------------------------}}}
 
 # Mouse options ------------------{{{
 set -g mouse on
@@ -71,8 +66,6 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
-# Display panes (prefix + q)
-set -g display-panes-time 4000
 
 # Make new tmux windows open with directory in current pane
 # Only works on tmux 1.9 or later
@@ -84,35 +77,17 @@ bind y run "tmux show-buffer | xclip -selection clipboard"
 
 # Status Bar -------------------------------------------------{{{
 
-set-option -g status on                # turn the status bar on
+# Status bar mostly handled by nord-tmux plugin
+set -g @nord_tmux_show_status_content "0"
 
-set -g status-interval 1               # set update frequencey (default 15 seconds)
-set -g status-justify left             # center window list for clarity
-# set-option -g status-position top    # position the status bar at top of screen
-
-# visual notification of activity in other windows
-setw -g monitor-activity off
-set -g visual-activity off
-
-# set color for status bar
-set-option -g status-bg colour235
-set-option -g status-fg colour031
-
-# set window list colors - red for active and cyan for inactive
-set -g window-status-style fg=colour039
-set -g window-status-current-style fg=black,bg=colour014
-
-# Window option navigation using VI (for viewing history)
-set-window-option -g mode-keys vi
-
-# Show if connected to VPN
+# # Show if connected to VPN
 set -g status-left-length 70
 set -g status-left "#{vpn_status}"
 
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right-length 100
-set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=colour063]: %b %d %Y %l:%M %p : #[fg=colour067]UTC #(date -u +%%H:%%M:%%S)"
+# # show session name, window & pane number, date and time on right side of
+# # status bar
+# set -g status-right-length 100
+# set -g status-right "#(gitmux -cfg $HOME/.gitmux.yml -q -fmt tmux #{pane_current_path}) #[fg=white]#{git_branch} #[fg=colour046,bold]#{battery_level} #[fg=colour063]: %b %d %Y %l:%M %p : #[fg=colour067]UTC #(date -u +%%H:%%M:%%S)"
 
 # Set window numbering to start at 1
 set -g base-index 1
@@ -122,12 +97,21 @@ set-option -g renumber-windows on
 # --------------------------------------------------------------}}}
 
 # TPM ----------------------------------------------------------{{{
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'nocode99/tmux-vpn-status'
-set -g @plugin 'alexanderjeurissen/tmux-world-clock'
-set -g @plugin 'pwittchen/tmux-plugin-battery'
+set -g @tpm_plugins '                     \
+    tmux-plugins/tpm                      \
+    tmux-plugins/tmux-sensible            \
+    tmux-plugins/tmux-resurrect           \
+    tmux-plugins/tmux-continuum           \
+    tmux-plugins/tmux-yank                \
+    tmux-plugins/tmux-pain-control        \
+    tmux-plugins/tmux-copycat             \
+    tmux-plugins/tmux-open                \
+    tmux-plugins/tmux-battery             \
+    tmux-plugins/tmux-cpu                 \
+    tmux-plugins/tmux-prefix-highlight    \
+    nocode99/tmux-vpn-status              \
+    arcticicestudio/nord-tmux             \
+'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
