updated plugins and settings

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -5,6 +5,7 @@ bind C-f send-prefix
 
 # Set default terminal
 set -g default-terminal "screen-256color"
+set-option -ag terminal-overrides ",screen-256color:Tc"
 set-option -g default-shell /bin/zsh
 
 # UNBINDS
@@ -36,9 +37,6 @@ if-shell '[[ $(uname -s) = Darwin ]]' {
   bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | pbcopy > /dev/null"
 } {
   bind -T copy-mode-vi MouseDown3Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xsel -i --clipboard > /dev/null"
-  # Status bar mostly handled by nord-tmux plugin
-  set -g @nord_tmux_show_status_content "0"
-
 }
 # ---------------------------------}}}
 
@@ -81,8 +79,8 @@ bind y run "tmux show-buffer | xclip -selection clipboard"
 # Status Bar -------------------------------------------------{{{
 
 # # Show if connected to VPN
-set -g status-left-length 70
-set -g status-left "#{vpn_status}"
+# set -g status-left-length 70
+# set -g status-left "#{vpn_status}"
 
 # # show session name, window & pane number, date and time on right side of
 # # status bar
