--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -7,13 +7,13 @@
   pager = delta
   mergeoptions = --no-edit
 
-[delta]
-  features = side-by-side line-numbers decorations
-  whitespace-error-style = 22 reverse
-  navigate = true
+; [delta]
+;   features = side-by-side line-numbers decorations
+;   whitespace-error-style = 22 reverse
+;   navigate = true
 
 
-[delta "decorations"]
-  commit-decoration-style = bold yellow box ul
-  file-style = bold yellow ul
-  file-decoration-style = none
+; [delta "decorations"]
+;   commit-decoration-style = bold yellow box ul
+;   file-style = bold yellow ul
+;   file-decoration-style = none
