added padding for zoom

--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -3,6 +3,7 @@ font_size 	 17
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
+window_padding_width 5
 
 # fixes underscores
 adjust_line_height 1
