--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -1,9 +1,10 @@
-font_family 	 Hack
-font_size 	 17
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_size 	     17
+font_family 	     Hack Nerd Font Mono
+italic_font          Hack Italic Nerd Font Complete Mono
+bold_font            Hack Bold Nerd Font Complete Mono
+bold_italic_font     Hack Bold Italic Nerd Font Complete Mono
 window_padding_width 5
+editor               /home/bkim/.asdf/shims/nvim
 
 # fixes underscores
 adjust_line_height 1
