--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -10,7 +10,7 @@ editor               /home/bkim/.asdf/shims/nvim
 adjust_line_height 1
 
 # NightLion_v2
-include ./theme.conf
+# include ./theme.conf
 
 # macos settings
 # setenv MYOS OSX > /etc/launchd.conf
