--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -58,7 +58,27 @@
       "args": ["--langserver"],
       "filetypes": ["terraform", "tf"],
       "rootPatterns": ["Makefile", ".git"]
+    },
+    "yaml": {
+      "command": "yaml-language-server",
+      "args": ["--stdio"],
+      "filetypes": ["yaml"],
+      "settings": {
+        "yaml": {
+          "schemas": {
+            "kubernetes": ["/kubernetes/**"],
+            "https://raw.githubusercontent.com/docker/compose/master/compose/config/compose_spec.json": "/*docker-compose.yml",
+            "https://raw.githubusercontent.com/threadheap/serverless-ide-vscode/master/packages/serverless-framework-schema/schema.json": "/*serverless.yml",
+            "https://raw.githubusercontent.com/OAI/OpenAPI-Specification/3.0.3/schemas/v3.0/schema.json": [
+              "/*open-api*.yml",
+              "/*open-api*.yaml"
+            ]
+          }
+        }
+      },
+      "rootPatterns": [".git"]
     }
+
   },
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
