--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -107,5 +107,6 @@
     "typeParameter": "\uf728",
     "default": "\uf29c"
   },
-  "snippets.ultisnips.pythonPrompt": false
+  "snippets.ultisnips.pythonPrompt": false,
+  "inlayHint.enable": false
 }
