--- a/dotfiles/.config/mise/config.toml
+++ b/dotfiles/.config/mise/config.toml
@@ -1,28 +1,28 @@
 [tools]
+"cargo:fd-find" = "latest"
+"cargo:ripgrep" = "latest"
+"cargo:tree-sitter-cli" = "latest"
+awscli = "2.15.52"
+azure-cli = "2.50.0"
+github-cli = "latest"
+go = "1.19.3"
+granted = "latest"
+k9s = "latest"
+kubectl = "1.28.0"
+lsd = "1.1.2"
+neovim = "0.10.0"
+node = "20.0.0"
+poetry = "latest"
+python = "3.12.3"
+ruby = "3.3.4"
+rust = "1.79.0"
 terraform = "1.7.5"
 terraform-ls = "latest"
-tmux = "latest"
-awscli = "2.15.52"
-go = "1.19.3"
-node = "20.0.0"
-yarn = "latest"
-python = "3.12.3"
-zoxide = "latest"
-github-cli = "latest"
-k9s = "latest"
-neovim = "0.10.0"
-poetry = "latest"
-kubectl = "1.28.0"
-azure-cli = "2.50.0"
 tflint = "latest"
-lsd = "1.1.2"
-rust = "latest"
-"cargo:ripgrep" = "latest"
-"cargo:fd-find" = "latest"
-ruby = "latest"
-"cargo:tree-sitter-cli" = "latest"
-vault = "latest"
-granted = "latest"
+tmux = "3.5a"
+vault = "1.17.2+ent"
+yarn = "4.3.1"
+zoxide = "latest"
 
 [settings]
 experimental = true
