--- a/dotfiles/.config/mise/config.toml
+++ b/dotfiles/.config/mise/config.toml
@@ -23,6 +23,9 @@ tmux = "3.5a"
 vault = "1.17.2+ent"
 yarn = "4.3.1"
 zoxide = "latest"
+kubecolor = "latest"
+terragrunt = "latest"
+helm = "latest"
 
 [settings]
 experimental = true
