--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -17,6 +17,9 @@ unbind o
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# history length
+# set-option -g history-limit 5000
+
 # shorten command delay
 set -sg escape-time 1
 # --------------------------------------------------------------}}}
