--- a/dotfiles/.config/mise/config.toml
+++ b/dotfiles/.config/mise/config.toml
@@ -26,6 +26,7 @@ zoxide = "latest"
 kubecolor = "latest"
 terragrunt = "latest"
 helm = "latest"
+gcloud = "latest"
 
 [settings]
 experimental = true
